# 1

./: CMakeLists.txt  LICENSE  README.md  assert.cpp  assert.hpp  expr.cpp  expr.hpp  expr_fwd.hpp  expr_visitor.hpp  expr_visitor_fwd.hpp  func.cpp  func.hpp  functional.cpp  functional.hpp  interp.cpp  interp.hpp  interp_func_fwd.hpp  io.cpp  io.hpp  ltype.cpp  ltype.hpp  main.cpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  runent.hpp  sample_code.l1  scanner.cpp  scanner.hpp  stmt.cpp  stmt.hpp  stmt_fwd.hpp  stmt_visitor.hpp  stmt_visitor_fwd.hpp  token.cpp  token.hpp  uncopyable.hpp
r_test/assignment/: undeclared.lox
r_test/call/: num.lox  object.lox
r_test/class/: reference_self.lox
r_test/closure/: unused_closure.lox  unused_later_closure.lox
r_test/constructor/: arguments.lox  call_init_explicitly.lox  early_return.lox  return_value.lox
r_test/field/: get_on_nil.lox  set_evaluation_order.lox  set_on_bool.lox  set_on_function.lox  set_on_num.lox  undefined.lox
r_test/for/: class_in_body.lox  statement_condition.lox  statement_increment.lox  var_in_body.lox
r_test/function/: extra_arguments.lox  missing_arguments.lox
r_test/inheritance/: inherit_from_nil.lox
r_test/method/: refer_to_name.lox  too_many_arguments.lox
r_test/new/: class_assign_methods_complicated.lox  class_assign_methods_medium.lox  class_first.lox  class_inheritance_simple.lox  class_method_no_return.lox  class_print_class.lox  class_static_method.lox  ctor_return_from_ctor.lox  ctor_return_value_from_ctor.lox  env_enclose.lox  env_enclose_all.lox  env_fun_binding.lox  env_redeclare.lox  float.lox  flow_truthfullness_simple.lox  fun_args_count.lox  fun_assign.lox  fun_env_multiple_nested.lox  fun_nest.lox  fun_return_test_parse_and_nil.lox  loop_simple.lox  method_return_self.lox  object_temporary.lox  resolver_global.lox  resolver_method_unused.lox  resolver_uninitialized.lox  super_outside.lox  var_assign.lox
r_test/operator/: add_bool_nil.lox  add_bool_num.lox  add_bool_string.lox  add_nil_nil.lox  add_string_nil.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  less_nonnum_num.lox  less_or_equal_num_nonnum.lox  modulo_nonnum_num.lox  modulo_num_nonnum.lox  multiply_nonnum_num.lox  negate_nonnum.lox  subtract_num_nonnum.lox
r_test/print/: missing_argument.lox
r_test/string/: unterminated.lox
r_test/super/: constructor.lox  extra_arguments.lox  super_without_name.lox
r_test/variable/: redeclare_global.lox  undefined_global.lox  undefined_local.lox  use_false_as_var.lox  use_global_in_initializer.lox  use_local_in_initializer.lox  use_nil_as_var.lox  use_this_as_var.lox
test/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox
test/call/: bool.lox  nil.lox  string.lox
test/class/: empty.lox  inherit_self.lox
test/closure/: resolver.lox  reuse_closure_slot.lox
test/comments/: multiline_1.l1  multiline_2.l1  (+4 more)
testing/: main.cpp
(+107 files in other folders)
